--- a/index.Rmd
+++ b/index.Rmd
@@ -227,7 +227,7 @@ probs[1:10]
 With logistic regression we are dealing with a curve like the one below which is a sigmoid function. The idea is to take our probabilities, which range between 0 and 1, and then pick a threshold over which we would classify that person as being positive for diabetes. In this context, we have a continuum. 
 
 
-```{r logitplot,echo=FALSE}
+```{r logitplot,echo=TRUE}
 myseq <- seq(-6,6,.1)
 myfunc <- function(x) {1/(1+exp(-x))}
 plot(myseq,myfunc(myseq),
@@ -398,8 +398,15 @@ This is a method that gives us multiple estimates of out-of-sample error, rather
 Each fold is simply a portion of the data. We'll generate a list called "folds" that contains 3 elements each of which are 256 index elements corresponding to rows in pm. The way we did the sample insures that each row shows up only in one fold. 
 
 ![](./PICS/kf33.png){width=550}
+For 1 to K:
+	  Build A Model on Combined Training Folds
+	  Make Predictions on Test Fold
+	  Record Performance Metric (e.g AUC, Accuracy)
+
+Present an average of the performance metric across all K iterations
 
 Here is our function to implement the K-Fold validation. It's pretty straightforward to define in terms of coding though it winds up being  somewhat specific to the particular method we are using. Still, we could give it an argument to accept different methods. 
+
 
 ```{r crossfoldfunc}
 cross_fold <- function(numofolds = 3) {
